# Master-file-tony

./: .gitignore  .gitlab-ci.yml  .mcp.json  Makefile  docker-compose.yml
.claude/: CLAUDE.md  CLAUDE_CODE.md  ENGINEERING_LOG.md  FINAL_REVIEW.md  PROJECT_PLAN.md  README.md  SYSTEM_PROTECTION.md  TOKEN_CONTROL_GUIDE.md  settings.local.json
.claude/Skills/: README.md
.claude/agents/: AGENT_TEMPLATE_MINIMAL.md  agent-01-orchestrator.md  agent-02-product-intelligence.md  agent-03-quality-security.md  agent-04-universal-backend.md  agent-05-data-platform.md  agent-06-devops-infrastructure.md  agent-07-universal-frontend.md  agent-08-visualization-mapping.md  agent-09-fullstack-integration.md  agent-10-ai-ml-platform.md  agent-11-data-science.md  agent-12-test-automation.md  agent-13-cloud-migration.md
.claude/hooks/: README.md  safety-check.ps1  safety-check.sh
.claude/rules/: core-safety.md  mcp-conventions.md  observability.md
.claude/spec/: 00-project-brief.md  00-v1-update.template.md  01-technical-spec.md  02-implementation-notes.md  README.md  (+1 more)
backend/: .env.example  config.toml  go.mod  go.sum  mcp.json  run.ps1  skills.json
docs/: design-chat-discord-integration.md
frontend/: index.html
frontend-react/: index.html  package-lock.json  package.json  vite.config.ts
rain-mcp/: README.md  pyproject.toml
rain-mcp/src/rain_mcp/: __init__.py  __main__.py  client.py  search.py  server.py
rain-mcp/tests/: smoke.py
schema/: README.md
scripts/: commit-msg  crawl-axiom.py  crawl-clickhouse.py  install-hooks.sh  pre-commit  probe-sim-cascade.py
(+405 files in other folders)
